; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/broadcom/brcm80211/brcmsmac/extr_mac80211_if.c_brcms_intrsrestore.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/broadcom/brcm80211/brcmsmac/extr_mac80211_if.c_brcms_intrsrestore.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.brcms_info = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @brcms_intrsrestore(%struct.brcms_info* %0, i32 %1) #0 {
  %3 = alloca %struct.brcms_info*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store %struct.brcms_info* %0, %struct.brcms_info** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.brcms_info*, %struct.brcms_info** %3, align 8
  %7 = getelementptr inbounds %struct.brcms_info, %struct.brcms_info* %6, i32 0, i32 0
  %8 = load i64, i64* %5, align 8
  %9 = call i32 @spin_lock_irqsave(i32* %7, i64 %8)
  %10 = load %struct.brcms_info*, %struct.brcms_info** %3, align 8
  %11 = getelementptr inbounds %struct.brcms_info, %struct.brcms_info* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @brcms_c_intrsrestore(i32 %12, i32 %13)
  %15 = load %struct.brcms_info*, %struct.brcms_info** %3, align 8
  %16 = getelementptr inbounds %struct.brcms_info, %struct.brcms_info* %15, i32 0, i32 0
  %17 = load i64, i64* %5, align 8
  %18 = call i32 @spin_unlock_irqrestore(i32* %16, i64 %17)
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @brcms_c_intrsrestore(i32, i32) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
